Fixed HTML and CSS rendering issues, fixed the alignment of the info text boxes, and changed the way multiple trajectories are rendered.

--- a/style.css
+++ b/style.css
@@ -7,67 +7,79 @@ html, body {
   font-family: Arial !important;  
 }
 
+.webpage{
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  grid-template-rows: 15% 85%;
+}
+
 .top-menu {
   width: 100%;
-  height: 15%;
+  height: 100%;
   background-color: lightyellow;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 1fr;
-  grid-column-gap: 5px;
+  grid-column-gap: 0.1%;
   grid-row-gap: 0px;
 }
 
 .timeline{
   grid-area: 1 / 1 / 2 / 2;
-  padding: 5px;
+  padding: 1%;
+}
+
+.timegraph{
+  display: inline-block;
+  position: relative;
+  width: calc(100% - 53px);
+  height: 30%;
+  margin: auto;
+  margin-left: 43px;
+  padding: 0px;
 }
 
 .time_input{
   display: inline-block;
   display: flex;  
   width: 100%;
-  gap: 0px;  
-}
-
-.numbersonly {
-  display: inline-block;
-  width: 10%;
-  margin-left: 0px;
-  margin-bottom: 0px;
 }
 
 .slider{
-  margin-left: 40px;
+  margin-left: 33px;
   margin-right: 0px;
   display: inline-block;
   width: 100%;
 }
 
-.timegraph{
+.numbersonly {
   display: inline-block;
-  position: relative;
-  width: calc(100% - 60px);
-  height: 30%;
-  margin: auto;
-  margin-left: 50px;
-  padding: 0px;
+  width: 10%;
+  margin-left: 0%;
+  margin-bottom: 0%;
+}
+
+.statistics {
+  grid-area: 1 / 2 / 2 / 3;
+}
+
+.legend {
+  grid-area: 1 / 3 / 2 / 4;
 }
 
 .statistics, .legend{
-  grid-area: 1 / 2 / 2 / 3;
-
-  padding: 1px;
+  padding: 1%;
   text-align: left;
   border-width: 1px;
   border-radius: 5px;
   border-style: solid;
   background-color: lightyellow;  
 
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-right: 10px;
-  margin-left: 10px;
+  margin-top: 1.5%;
+  margin-bottom: 1.5%;
+  margin-right: 1.5%;
+  margin-left: 1.5%;
 
   width: auto;
   height: auto;
@@ -76,14 +88,11 @@ html, body {
   line-height: 30%;
 }
 
-.legend {
-  grid-area: 1 / 3 / 2 / 4;
-}
 
 .legendItem {
   display: flex;
   align-items: center;
-  margin-bottom: 5px;
+  margin-bottom: 0.5%;
 }
 
 .legendColorBox {
@@ -98,7 +107,7 @@ html, body {
   grid-template-rows: repeat(3, 1fr);
   grid-column-gap: 0px;
   grid-row-gap: 0px;
-  height: 83%;
+  height: 100%;
 }
 
 .field { grid-area: 1 / 1 / 2 / 2; }
@@ -112,24 +121,29 @@ html, body {
 .velocity { grid-area: 3 / 1 / 4 / 2; }
 .phase2 { grid-area: 3 / 2 / 4 / 3; }
 
-.graphs .field, .graphs .potential, .graphs .energy,
-.graphs .displacement, .graphs .phase1, .graphs .recom-ion,
-.graphs .velocity, .graphs .phase2 {
-  position: relative;
-  margin-right: 5px; /* Adjust as needed */
-}
 
 .plot-container {
   position: relative;
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
+  padding-bottom: 2%;
+  padding-right: 10px;
+}
+
+/* Adjust the graph plot elements to fill their containers */
+.field, .potential, .energy,
+.displacement, .phase1, .recom-ion,
+.velocity, .phase2 {
+  width: 100%;
+  height: 100%; /* Ensures the graph fills the container */
 }
 
 .info-icon {
   position: absolute;
   top: 10%;
   left: 97%;
-  
+
   font-size: 20px; /* Increased font size for super large icons */
   cursor: pointer;
   opacity: 0.5;
@@ -145,11 +159,17 @@ html, body {
   display: none;
   position: absolute;
   top: 10%; /* Adjust this value as needed */
-  left: 72%;
-  width: 300px;
-  padding: 10px;
+  right: 5%;
+  width: 50%;
+  padding: 1.5%;
   background-color: white;
   border: 1px solid #ccc;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   z-index: 1000;
 }
+
+/* Add this in your style.css */
+.loading {
+  cursor: wait !important;
+}
+
